port to 1.20. main changes are creative tab, and block loot table datagen. other changes are mostly renames/remaps